--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-google-cloud-bigquery
+google-cloud-bigquery==2.34.3
 google-auth
 pandas
 dateparser
@@ -8,4 +8,3 @@ streamlit
 plotly
 pyarrow
 db-dtypes
-google-cloud-bigquery[pandas]==2.34.3
